# Viper650

viper_description/: CMakeLists.txt  package.xml
viper_description/launch/: load_viper_s650.launch  test.launch  viper_gazebo.launch  viper_multi_gazebo.launch  viper_multirobots.launch  viper_rviz.launch  viper_standalone_gazebo.launch
viper_description/src/: robot_state_node.cpp
viper_description/urdf/: viper_for_multi.urdf.xacro  viper_multi.urdf.xacro  viper_s650.urdf  viper_s650.urdf.xacro  viper_s650.xacro  viper_two_robots.xacro
viper_gazebo/: CMakeLists.txt  package.xml
viper_gazebo/config/: ViperControlLocalImpl.SetVelocity.yaml  ViperControlLocalImpl.yaml
viper_gazebo/launch/: viper_control.launch
viper_gazebo/test/: SetJointStatePositionPublisher.cpp  SetJointStatePublisher.cpp  SimpleJointTrajectoryClient.cpp
viper_gazebo/urdf/: gzplugin_grasp_fix.urdf.xacro  gzplugin_joint_control.urdf.xacro  gzplugin_ros_control.urdf.xacro
viper_joints/: CMakeLists.txt  package.xml
viper_joints/config/: ViperJoints.yaml
viper_joints/include/viper_joints/: ViperJointManager.h
viper_joints/launch/: init_viper_joints.launch
viper_joints/src/: ViperJointManager.cpp
viper_s650/: CMakeLists.txt  package.xml
viper_s650/config/: JointTrajectoryParams.yaml  ViperControl.yaml  ViperJointsNames.yaml  ViperTrajectoryControl.yaml
viper_s650/launch/: gazebo_multiple_robot.launch  gazebo_single_robot.launch  viper_rviz_controlled.launch
