<?xml version="1.0"?>
<package format="2">
  <name>viper_description</name>
  <version>1.0.0</version>
  <description>The viper_description package</description>

  <maintainer email="rosindustrial@todo.todo">rosindustrial</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
